<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Singapore Temples 新加坡宗庙</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_display_message">My Message</string>
    <string name="action_settings">Settings</string>
    
    <string name="templeName">Temple Name 宗庙名</string>
    <string name="type">Type 类型</string>
    <string name="mainDeity">Main Deities 主神</string> 
    <string name="dialect">Dialect 籍贯</string> 
   <string name="builderSurname">Builder Surname 姓氏</string> 
    <string name="worships">Worships 敬拜活动</string> 
    <string name="contact">Contact 联系</string> 
    <string name="others">Others 其他资料</string> 
    <string name="builtyear">Year built 建造年份</string> 
    
</resources>